--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ img{
     border-top-left-radius: 0.5rem;
 }
 
-.button:hover{
+.button:hover:not(.live){
     background-color: #e93b81;
     color: white;
 }
@@ -73,4 +73,17 @@ img{
         grid-template-columns: 1fr 1fr;
         column-gap: 2rem;
     }
+}
+
+
+.content{
+    display: none;
+}
+
+.content.live{
+    display: block;
+}
+
+.button.live{
+    background-color: #fcffe2;
 }
